--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,78 @@
     margin: 0;
 }
 
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
 @media screen and (min-width: 300px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
@@ -30,7 +102,6 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
-    background-color: #49d0b0;
     color: #fff;
 }
 
@@ -39,11 +110,14 @@
     opacity: .3;
     text-align: right;
     font-size: .625rem;
+    cursor: default;
 }
 
 .pokemon .name {
     color: #fff;
     margin-bottom: 0;
+    text-transform: capitalize;
+    cursor: default;
 }
 
 .pokemon .detail {
@@ -60,12 +134,14 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
     color: #fff;
     padding: .25rem .5em;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+    cursor: default;
 }
 .pokemon .detail img {
     max-width: 100%;
